(Grav GitSync) Automatic Commit from Richard Hoppel

--- a/plugins/admin/languages/en.yaml
+++ b/plugins/admin/languages/en.yaml
@@ -394,6 +394,7 @@ PLUGIN_ADMIN:
   AUTOESCAPE_VARIABLES: "Autoescape variables"
   AUTOESCAPE_VARIABLES_HELP: "Autoescapes all variables.  This will break your site most likely"
   ASSETS: "Assets"
+  CSS_ASSETS: "CSS Assets"
   CSS_PIPELINE: "CSS pipeline"
   CSS_PIPELINE_HELP: "The CSS pipeline is the unification of multiple CSS resources into one file"
   CSS_PIPELINE_INCLUDE_EXTERNALS: "Include externals in CSS pipeline"
@@ -406,12 +407,21 @@ PLUGIN_ADMIN:
   CSS_MINIFY_WINDOWS_OVERRIDE_HELP: "Minify Override for Windows platforms. False by default due to ThreadStackSize"
   CSS_REWRITE: "CSS rewrite"
   CSS_REWRITE_HELP: "Rewrite any CSS relative URLs during pipelining"
+  JS_ASSETS: "JavaScript Assets"
   JAVASCRIPT_PIPELINE: "JavaScript pipeline"
   JAVASCRIPT_PIPELINE_HELP: "The JS pipeline is the unification of multiple JS resources into one file"
   JAVASCRIPT_PIPELINE_INCLUDE_EXTERNALS: "Include externals in JS pipeline"
   JAVASCRIPT_PIPELINE_INCLUDE_EXTERNALS_HELP: "External URLs sometimes have relative file references and shouldn't be pipelined"
   JAVASCRIPT_PIPELINE_BEFORE_EXCLUDES: "JS pipeline render first"
   JAVASCRIPT_PIPELINE_BEFORE_EXCLUDES_HELP: "Render the JS pipeline before any other JS references that are not included"
+  JS_MODULE_ASSETS: "JavaScript Module Assets"
+  JAVASCRIPT_MODULE_PIPELINE: "JavaScript Module pipeline"
+  JAVASCRIPT_MODULE_PIPELINE_HELP: "The JS Module pipeline is the unification of multiple JS resources into one file"
+  JAVASCRIPT_MODULE_PIPELINE_INCLUDE_EXTERNALS: "Include externals in JS Module pipeline"
+  JAVASCRIPT_MODULE_PIPELINE_INCLUDE_EXTERNALS_HELP: "External URLs sometimes have relative file references and shouldn't be pipelined"
+  JAVASCRIPT_MODULE_PIPELINE_BEFORE_EXCLUDES: "JS Module pipeline render first"
+  JAVASCRIPT_MODULE_PIPELINE_BEFORE_EXCLUDES_HELP: "Render the JS pipeline before any other JS references that are not included"
+  GENERAL_CONFIG: "General Asset Configuration"
   JAVASCRIPT_MINIFY: "JavaScript minify"
   JAVASCRIPT_MINIFY_HELP: "Minify the JS during pipelining"
   ENABLED_TIMESTAMPS_ON_ASSETS: "Enable timestamps on assets"
@@ -748,6 +758,9 @@ PLUGIN_ADMIN:
   2FA_SECRET: "2FA Secret"
   2FA_SECRET_HELP: "Scan this QR code into your [Authenticator App](https://learn.getgrav.org/admin-panel/2fa#apps). Also it's a good idea to backup the secret in a safe location, in case you need to reinstall your app. Check the [Grav docs](https://learn.getgrav.org/admin-panel/2fa) for more information "
   2FA_REGENERATE: "Regenerate"
+  YUBIKEY_ID: "YubiKey ID"
+  YUBIKEY_OTP_INPUT: "YubiKey OTP"
+  YUBIKEY_HELP: "Insert your YubiKey into your computer and click the button to generate an OTP. The first 12 chars are your client ID and will be saved."
   FORCE_LOWERCASE_URLS: "Force lowercase URLs"
   FORCE_LOWERCASE_URLS_HELP: "By default Grav will set all slugs and routes to be lowercase. With this set to false, Uppercase slugs and routes can be used"
   INTL_ENABLED: "Intl module integration"
